<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SelectCardType" >

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/sel"
        android:textColor="#0080FF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv2"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="56dp"
        android:background="#FFFF00"
        android:text="@string/yel"
        android:onClick="yellow"
        android:textColor="#696969"
        android:textStyle="bold" />

    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/tv2"
        android:layout_marginRight="16dp"
        android:background="#B3EE3A"
        android:onClick="green"
        android:text="@string/gy"
        android:textColor="#696969"
        android:textStyle="bold" />

    <Button
        android:id="@+id/b3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button1"
        android:layout_centerVertical="true"
        android:layout_marginRight="21dp"
        android:background="#FFFFFF"
        android:text="@string/white"
        android:onClick="white"
        android:textColor="#696969"
        android:textStyle="bold" />

    <Button
        android:id="@+id/b5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b4"
        android:layout_marginTop="74dp"
        android:layout_toRightOf="@+id/b3"
        android:background="#FF8C00"
        android:text="@string/saf"
        android:onClick="saf"
        android:textColor="#696969"
        android:textStyle="bold" />

    <Button
        android:id="@+id/b4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b2"
        android:layout_centerVertical="true"
        android:layout_marginLeft="37dp"
        android:background="#BBFFFF"
        android:text="@string/blue"
        android:onClick="blue"
        android:textColor="#696969"
        android:textStyle="bold" />

</RelativeLayout>
