<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sugar"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp"
        android:text="@string/authen"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="normal|italic" />

    <Button
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et2"
        android:layout_marginTop="56dp"
        android:layout_toRightOf="@+id/tv3"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:onClick="login"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/tv1"
        android:layout_marginBottom="44dp"
        android:layout_marginRight="18dp"
        android:ems="10"
        android:inputType="text"
        android:shadowColor="#FF0000" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et1"
        android:layout_alignRight="@+id/textView3"
        android:layout_marginBottom="14dp"
        android:text="@string/user"
        android:textColor="#1E90FF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et1"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="text|textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_below="@+id/tv1"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="173dp"
        android:text="@string/pass"
        android:textColor="#1E90FF"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>
